2007-05-15  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/vhdl.lang: fix typo in std_logic
	data type.

=== gtksourceview 1.8.6 ===

2007-05-01  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/configure.in:
	* gtksourceview/README:
	* gtksourceview/NEWS:

	release 1.8.6

2006-04-15  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourceview.c (gtk_source_view_expose):
	fixed drawing current line so no garbage is left on screen when
	scrolling horizontally.

2007-03-20  Carlos Garnacho  <carlos@imendio.com>

	* gtksourceview/gtksourceview.c (gtk_source_view_undo)
	(gtk_source_view_redo) (gtk_source_view_populate_popup): Do not allow
	undo/redo if the GtkSourceView is not editable. Fixes #418521.

=== gtksourceview 1.8.5 ===

2007-03-11  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/configure.in:
	* gtksourceview/README:
	* gtksourceview/NEWS:

	release 1.8.5

=== gtksourceview 1.8.4 ===

2006-02-12  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/configure.in:
	* gtksourceview/README:
	* gtksourceview/NEWS:

	release 1.8.4

2007-02-12  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/php.lang: some builtins.
	Patch by Patryk Zawadzki.

2007-02-12  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/perl.lang: perl operators.
	Patch by Joachim Noreiko.
	* gtksourceview/language-specs/ocaml.lang: fixes by 
	thelema@swbell.net.
	* gtksourceview/language-specs/ocaml.lang: missing keywords by 
	Stefan Schweizer.

2006-02-10  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourceiter.c: (exact_prefix_cmp): new UTF8
        accent mark-aware replacement for strncmp(), fixes #339805;
        renamed g_utf8_* functions to utf8_* to avoid potential clash
        with glib namespace.

2007-01-16  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/verilog.lang:

	Highlight compiler directives.

2007-01-16  Paolo Borelli  <pborelli@katamail.com>
