@@ -30,8 +30,7 @@
 
 #include <libxml/xmlreader.h>
 
-#include <glib/gstdio.h>
-#include <glib/gmappedfile.h>
+#include <glib.h>
 
 #include "gtksourceview-i18n.h"
 
