@@ -27,10 +27,10 @@
 G_BEGIN_DECLS
 
 #define GTK_TYPE_SOURCE_LANGUAGES_MANAGER		(gtk_source_languages_manager_get_type ())
-#define GTK_SOURCE_LANGUAGES_MANAGER(obj)		(GTK_CHECK_CAST ((obj), GTK_TYPE_SOURCE_LANGUAGES_MANAGER, GtkSourceLanguagesManager))
-#define GTK_SOURCE_LANGUAGES_MANAGER_CLASS(klass)	(GTK_CHECK_CLASS_CAST ((klass), GTK_TYPE_SOURCE_LANGUAGES_MANAGER, GtkSourceLanguagesManagerClass))
-#define GTK_IS_SOURCE_LANGUAGES_MANAGER(obj)		(GTK_CHECK_TYPE ((obj), GTK_TYPE_SOURCE_LANGUAGES_MANAGER))
-#define GTK_IS_SOURCE_LANGUAGES_MANAGER_CLASS(klass)	(GTK_CHECK_CLASS_TYPE ((klass), GTK_TYPE_SOURCE_LANGUAGES_MANAGER))
+#define GTK_SOURCE_LANGUAGES_MANAGER(obj)		(G_TYPE_CHECK_INSTANCE_CAST ((obj), GTK_TYPE_SOURCE_LANGUAGES_MANAGER, GtkSourceLanguagesManager))
+#define GTK_SOURCE_LANGUAGES_MANAGER_CLASS(klass)	(G_TYPE_CHECK_CLASS_CAST ((klass), GTK_TYPE_SOURCE_LANGUAGES_MANAGER, GtkSourceLanguagesManagerClass))
+#define GTK_IS_SOURCE_LANGUAGES_MANAGER(obj)		(G_TYPE_CHECK_INSTANCE_TYPE ((obj), GTK_TYPE_SOURCE_LANGUAGES_MANAGER))
+#define GTK_IS_SOURCE_LANGUAGES_MANAGER_CLASS(klass)	(G_TYPE_CHECK_CLASS_TYPE ((klass), GTK_TYPE_SOURCE_LANGUAGES_MANAGER))
 
 
 typedef struct _GtkSourceLanguagesManager		GtkSourceLanguagesManager;
